fix: use !important to avoid horizontal scroll bar

--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,7 @@
 html {
   background: transparent !important;
   border: 0;
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 body {
